Update speech_emotion_recognition using CNN.ipynb

--- a/speech_emotion_recognition using CNN.ipynb
+++ b/speech_emotion_recognition using CNN.ipynb
@@ -6,9 +6,8 @@
         "id": "4Oam7zP4KhEC"
       },
       "source": [
-        "# Additional Readings\n",
-        "You can read the full description of project here:\n",
-        "https://medium.com/@Markeko/speech-emotion-recognition-with-convolutional-neural-network-ae5406a1c0f7"
+        "# SER on CREMA-D using CNN\n",
+        
       ]
     },
     {
